force-app/main/default/objects/pdffiller_sfree__Log__c/fields/pdffiller_sfree__ClassName__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__ClassName__c</fullName>
    <label>ClassName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>