force-app/main/default/objects/pdffiller_sfree__Log__c/fields/pdffiller_sfree__IngestTime__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__IngestTime__c</fullName>
    <label>IngestTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>