force-app/main/default/objects/pdffiller_sfree__Log__c/fields/pdffiller_sfree__Tags__c.field-meta.xml
<CustomField>
    <fullName>pdffiller_sfree__Tags__c</fullName>
    <label>Tags</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>